--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         let globalUniformScaleFactor = 1;
         let fontMetrics = { baselineY_SVG: 0 };
 
-        const FONT_BASE_URL = "./fonts/";
+        const FONT_BASE_URL = "https://y2do.net/fonts/";
         let currentDefaultMaterialType = "svgColor";
 
         const MATERIAL_PRESETS = {
